# ChangeLog for sci-geosciences/josm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.10 2008/03/21 19:58:41 hanno Exp $

*josm-1.5_p587 (21 Mar 2008)

  21 Mar 2008; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p587.ebuild:
  Version bump.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> josm-1.5_p493.ebuild,
  josm-1.5_p549.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*josm-1.5_p549 (20 Feb 2008)

  20 Feb 2008; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p549.ebuild:
  Version bump.

*josm-1.5_p493 (17 Dec 2007)

  17 Dec 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p493.ebuild:
  Version bump.

*josm-1.5_p490 (16 Dec 2007)

  16 Dec 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p490.ebuild:
  Version bump, new de locale.

*josm-1.5_p457 (07 Nov 2007)

  07 Nov 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p457.ebuild:
  Version bump.

*josm-1.5_p352 (09 Oct 2007)

  09 Oct 2007; Hanno Boeck <hanno@gentoo.org> files/josm,
  +josm-1.5_p352.ebuild:
  Version bump for API 0.5.

  08 Sep 2007; Hanno Boeck <hanno@gentoo.org> ChangeLog:
  Add desktop file and icon.

*josm-1.5_p320 (06 Sep 2007)

  06 Sep 2007; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p320.ebuild:
  Bump to snapshot version.

*josm-1.5 (06 Sep 2007)

  06 Sep 2007; Hanno Boeck <hanno@gentoo.org> +files/josm, +josm-1.5.ebuild:
  Initial commit of the Java OpenStreetMap Editor.
