@@ -1,6 +1,11 @@
 # ChangeLog for sci-geosciences/josm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.10 2008/03/21 19:58:41 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.11 2008/04/19 13:29:37 hanno Exp $
+
+*josm-1.5_p613 (19 Apr 2008)
+
+  19 Apr 2008; Hanno Boeck <hanno@gentoo.org> +josm-1.5_p613.ebuild:
+  Version bump.
 
 *josm-1.5_p587 (21 Mar 2008)
 
